# srt-editor

./: .npmrc  CLAUDE.md  DEPLOYMENT.md  bump-version.cjs  components.d.ts  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.kiro/steering/: product.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: firered_corrector.rs  lib.rs  sensevoice_transcriber.rs  srt_parser.rs  waveform_generator.rs  whisper_python_transcriber.rs  whisper_transcriber.rs
src/assets/: main.css
src/components/: ChristmasGreeting.vue  ChristmasSnow.vue  CorrectionCompareDialog.vue  SettingsDialog.vue  SplitSubtitleDialog.vue  TitleBar.vue  UpdateDialog.vue  WaveformViewer.vue  WelcomeGuide.vue
src/components/editor/: EditorSidebar.vue  SubtitleEditPanel.vue  SubtitleListPanel.vue  TimelineControls.vue
src/composables/: useEditorTour.ts
src/stores/: audio.ts  config.ts  smartDictionary.ts  subtitle.ts  tabManager.ts
src/types/: correction.ts  subtitle.ts  tab.ts
src/utils/: logger.ts  updater.ts  waveformAlign.ts
src/views/: EditorPage.vue  WelcomePage.vue
